--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "styled-components": "^6.0.0"
   },
   "engines": {
-    "node": ">=18.0.0 <20.x.x",
+    "node": ">=18.0.0 <19.9.0",
     "npm": ">=6.0.0"
   },
   "strapi": {
